--- a/tesi1.tex
+++ b/tesi1.tex
@@ -135,7 +135,7 @@ More in details, we will start looking at their architecture and basic concepts,
 
 With regard to the MQTT protocol, I will also talk about two interesting real use cases on which I had the opportunity to work during my internship, in order to see how much theory is respected in practice and how a real-world productive system should be designed.\\
 
-Unfortunately, I had not the opportunity to work on productive ZigBee projects, during my internship since, as we will see, it is a protocol mainly aimed to home applications rather than industrial ones.\\\newline
+Unfortunately, I had not the opportunity to work on industrial ZigBee projects, during my internship since, as we will see, it is a protocol mainly aimed to home applications rather than industrial ones.\\\newline
 
 {\setlength{\parindent}{0cm}
 Let's start to discuss them starting from the first one, MQTT.
