--- a/tesi1.tex
+++ b/tesi1.tex
@@ -1336,7 +1336,7 @@ Let's briefly see them:
 
 \begin{itemize}
 \setlength{\itemindent}{+4mm}
-\item[$\bullet$] \emph{Physical Layer}: it provides the basic radio communication capabilities, such as power, channels, modulation, demodulation, transmission rate, etc.
+\item[$\bullet$] \emph{Physical Layer}: it provides the basic radio communication capabilities, such as channels, modulation, demodulation, transmission rate, etc.
 \item[$\bullet$] \emph{Medium Access Control layer (MAC)}: it manages data transmissions between neighboring devices (point to point). 
 It includes services like transmission retry and acknowledgment management~\cite{digi}.
 \item[$\bullet$] \emph{Network Layer}: it adds routing capabilities that allows data packets to traverse multiple devices (multiple hops) to route data from source to destination, in order to create more complex topologies.
@@ -1368,7 +1368,7 @@ So, in this mode, all the devices know when to communicate with the coordinator.
 Beacon mode is mainly used when the coordinator runs on batteries, hence it needs to save as much power as possible.
 
 \begin{figure}[H]
-\includegraphics[width=5cm,height=5cm,keepaspectratio]{zigbee_beaconmode}
+\includegraphics[width=7cm,height=7cm,keepaspectratio]{zigbee_beaconmode}
 \centering
 \caption{Beacon mode}
 \end{figure}
@@ -1378,7 +1378,7 @@ This mode is used in systems where devices are almost always 'asleep' (for insta
 Clearly, it might happen that an end device finds the channel busy and in that case the coordinator will miss the call.
 
 \begin{figure}[H]
-\includegraphics[width=5cm,height=5.5cm,keepaspectratio]{zigbee_nonbeaconmode}
+\includegraphics[width=7cm,height=7.5cm,keepaspectratio]{zigbee_nonbeaconmode}
 \centering
 \caption{Non-Beacon mode}
 \end{figure}
