--- a/tesiref.bib
+++ b/tesiref.bib
@@ -59,7 +59,7 @@
 
 @misc{sslvulns,
 	title={Digicert},
-	howpublished="\url{https://www.digicert.com/cert-inspector-vulnerabilities.htm#certificate_vulnerabilities}"
+	howpublished="\url{https://www.digicert.com/cert-inspector-vulnerabilities.htm\#certificate_vulnerabilities}"
 }
 
 @misc{mitmwiki,
@@ -74,7 +74,7 @@
 
 @misc{ocspwiki,
 	title={OCSP},
-	howpublished="https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol"
+	howpublished="\url{https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol}"
 }
 
 @misc{mqttonlywithsdp,
