--- a/tesiref.bib
+++ b/tesiref.bib
@@ -58,7 +58,7 @@
 }
 
 @misc{sslvulns,
-	title={Digicert},
+	title={Digicert Certificate Inspector},
 	howpublished="\url{https://www.digicert.com/cert-inspector-vulnerabilities.htm\#certificate_vulnerabilities}"
 }
 
@@ -112,7 +112,7 @@
 
 @misc{secanalysisofzigbee,
 	title={Security Analysis of Zigbee},
-	author="Xueqi Fan, Fransisca Susan, William Long, Shangyan Li",
+	author="Fan, Xueqi and Susan, Fransisca and Long, William and Li, Shangyan",
 	year={2017}
 }
 
@@ -160,4 +160,3 @@
 	howpublished="\url{https://www.nxp.com/docs/en/supporting-information/MAXSECZBNETART.pdf}",
 	author="nxp",
 	year={2017}}
-
