--- a/tesiref.bib
+++ b/tesiref.bib
@@ -10,6 +10,29 @@
 	howpublished="\url{https://www.theguardian.com/technology/2017/feb/28/cloudpets-data-breach-leaks-details-of-500000-children-and-adults}"
 }
 
+@article{successiot,
+	title={Success with the Internet of Things Requires More Than Chasing the Cool Factor},
+	author={Maciej Kranz},
+	year={2017}
+}
+
+@misc{whydoiot,
+	title={Why Do IoT Companies Keep Building Devices with Huge Security Flaws?},
+	author={Andrew Tannenbaum},
+	year={2017},
+	howpublished="\url{https://hbr.org/2017/04/why-do-iot-companies-keep-building-devices-with-huge-security-flaws}"
+}
+
+@misc{wikica,
+	title="General Data Protection Regulation",
+	howpuglished="\url{https://en.wikipedia.org/wiki/General_Data_Protection_Regulation}"}
+
+@misc{ca,
+	title="Cambridge Analytica travolta dal Datagate: bancarotta e chiusura immediata",
+	author={Marco Valsania},
+	year={2018},
+	howpublished="\url{http://www.ilsole24ore.com/art/mondo/2018-05-02/datagate-cambridge-analytica-annuncia--chiusura-immediata-205429.shtml?uuid=AEAKYxhE}"}
+
 @misc{forbes,
 	title={2017 Roundup Of Internet Of Things Forecasts},
 	author={Louis Columbus},
