--- a/tesi1.tex
+++ b/tesi1.tex
@@ -1237,7 +1237,7 @@ So, the moral of this brief story is that it is fundamental to consider every se
 \section{Introduction}
 \bigskip
 
-ZigBee is a low-cost emerging protocol deployed by ZigBee Alliance, for controlling and monitoring applications, covering 10-100 meters within the range. \\
+ZigBee is a low-cost protocol developed by ZigBee Alliance, for controlling and monitoring applications, covering 10-100 meters within the range. \\
 This communication system is less expensive and simpler than Bluetooth and Wi-Fi and its range can be extended using routers, as we will see in a minute.\\
 
 Nowadays, ZigBee is mainly used in the following fields of application:
@@ -1895,7 +1895,7 @@ This new regulation should allow citizens to have more control over their data a
 The GDPR also take into consideration the trade of data between companies, which is an hot topic thanks to recent events\cite{ca}.\\
 
 
-Even \emph{documentation} and \emph{refactoring} are important while dealing with security; most of the time documentation is neglected because it takes lot of time and is not payed by the customer. 
+Even \emph{documentation} and \emph{refactoring} are important while dealing with security; most of the time documentation is neglected because it takes lot of time and it is not payed by the customer. 
 Good documentation is necessary to understand the code and avoid the introduction of flaws, especially in big projects.
 Refactoring is fundamental because it permits to better organize and maintain the code.\\ For instance, if we keep only one copy of a vulnerable code rather than several ones, we will spare time to fix it.\\
 
