--- a/tesi1.tex
+++ b/tesi1.tex
@@ -1237,18 +1237,11 @@ So, the moral of this brief story is that it is fundamental to consider every se
 \section{Introduction}
 \bigskip
 
-ZigBee is a low-cost protocol developed by ZigBee Alliance, for controlling and monitoring applications, covering 10-100 meters within the range. \\
-This communication system is less expensive and simpler than Bluetooth and Wi-Fi and its range can be extended using routers, as we will see in a minute.\\
+ZigBee is a low-cost protocol developed by ZigBee Alliance, for low-power wireless personal area networks that interconnect devices primarily for personal uses within a short range (10-100 meters). \\
+This communication system is less expensive than Wi-Fi and it has a larger range than Bluetooth, besides its range can also be extended using routers.\\
 
-Nowadays, ZigBee is mainly used in the following fields of application:
-\begin{itemize}
-\setlength{\itemindent}{+4mm}
-\item[$\bullet$] \emph{Industrial automation}: industries exploit ZigBee to manage and continuously monitor critical equipments.\\
-Why ZigBee and not simply Wi-Fi or Bluetooth? Because it has lower communication costs than Wi-Fi and a higher communication range than Bluetooth, hence it optimizes the control process (theoretically).
-\item[$\bullet$] \emph{Smart Home}: this protocol is perfectly suited for controlling home appliances remotely. We may think to TVs, surveillance devices, locks, thermostats, lighting system, garage door, windows, blinds, speakers, as well as any other home system that can be controlled remotely.\\
-Currently, this is the most common ZigBee application.\\
-
-\end{itemize}
+Nowadays, ZigBee is used in industrial automation, where industries exploit it to manage and monitor critical equipments, but in particular this protocol is perfectly suited for controlling home appliances remotely. We may think to TVs, surveillance devices, locks, thermostats, lighting system, garage door, windows, blinds, speakers, as well as any other home system that can be controlled remotely.\\
+Currently, ZigBee is mainly used to build Smart Homes.\\
 
 In section \ref{sec:zigbeearch} we start to analyze the architecture and the basic concepts of this protocol.\\
 
