--- a/tesi1.tex
+++ b/tesi1.tex
@@ -1743,6 +1743,7 @@ What I think about this protocol is that it is still not considered as important
 Finally, since technology is growing extremely fast, even small devices are becoming more and more powerful and able to support other heavier wireless protocols, like Wi-Fi, which is definitely much more widespread.\\
 Moreover, researchers are being to bring down power requirements of Wi-Fi based systems, so that they can perform at low energy levels like ZigBee does.\\
 
+Today we almost trust the security of our Wi-Fi networks, but it has taken a few improvements over the years to get there. The same will happen with ZigBee: more usage will encourage product providers to improve the way security is handled and make it trusted as Wi-Fi is today~\cite{zigbeesmarthomeissues}.\\
 
 
 
