--- a/tesiref.bib
+++ b/tesiref.bib
@@ -23,6 +23,13 @@
 	howpublished="\url{https://hbr.org/2017/04/why-do-iot-companies-keep-building-devices-with-huge-security-flaws}"
 }
 
+@misc{zigbeesmarthomeissues,
+	title={ZigBee and the Smart Home: Is security an issue?},
+	author={Cees Links},
+	year={2013},
+	howpublished="\url{https://www.ecnmag.com/blog/2013/09/zigbee-and-smart-home-security-issue}"
+}
+
 @misc{wikica,
 	title="General Data Protection Regulation",
 	howpuglished="\url{https://en.wikipedia.org/wiki/General_Data_Protection_Regulation}"}
