--- a/tesiref.bib
+++ b/tesiref.bib
@@ -1,6 +1,6 @@
 
 @misc{kevinashton,
-	title={Kevin Ashton},
+	title={{Kevin Ashton}},
 	howpublished={"\url{https://en.wikipedia.org/wiki/KevinAshton/}"}}
 
 @misc{toys,
@@ -24,14 +24,14 @@
 }
 
 @misc{zigbeesmarthomeissues,
-	title={ZigBee and the Smart Home: Is security an issue?},
+	title={{ZigBee and the Smart Home: Is security an issue?}},
 	author={Cees Links},
 	year={2013},
 	howpublished="\url{https://www.ecnmag.com/blog/2013/09/zigbee-and-smart-home-security-issue}"
 }
 
 @misc{wikica,
-	title="General Data Protection Regulation",
+	title={{General Data Protection Regulation}},
 	howpuglished="\url{https://en.wikipedia.org/wiki/General_Data_Protection_Regulation}"}
 
 @misc{ca,
@@ -41,18 +41,18 @@
 	howpublished="\url{http://www.ilsole24ore.com/art/mondo/2018-05-02/datagate-cambridge-analytica-annuncia--chiusura-immediata-205429.shtml?uuid=AEAKYxhE}"}
 
 @misc{forbes,
-	title={2017 Roundup Of Internet Of Things Forecasts},
+	title={{2017 Roundup Of Internet Of Things Forecasts}},
 	author={Louis Columbus},
 	year={2017},
 	howpublished="\url{https://www.forbes.com/sites/louiscolumbus/2017/12/10/2017-roundup-of-internet-of-things-forecasts/#5866d27d1480}"
 }
 
 @misc{cirruslink,
-	title={Cirrus Link},
+	title={{Cirrus Link}},
 	howpublished="\url{https://www.cirrus-link.com/}"}
 
 @misc{ibm,
-	title={IBM},
+	title={{IBM}},
 	howpublished="\url{https://www.ibm.com/}"
 }
 
@@ -69,26 +69,32 @@
 }
 
 @misc{mqttrfc,
-	title={MQTT RFC},
+	title={{MQTT RFC}},
 	year={2014},
 	howpublished="\url{http://docs.oasis-open.org/mqtt/mqtt/v3.1.1/os/mqtt-v3.1.1-os.pdf}"
 }
 
+@misc{hivemqessentials,
+	title={{MQTT Essentials}},
+	author="HiveMQ Team",
+	howpublished="\url{https://www.hivemq.com/blog/mqtt-essentials/}"
+}
+
 @misc{hivemq,
-	title={MQTT Security fundamentals},
-	author="dc-square GmbH",
+	title={{MQTT Security fundamentals}},
+	author="HiveMQ Team",
 	howpublished="\url{https://www.hivemq.com/blog/mqtt-security-fundamentals-authentication-username-password}"
 }
 
 @misc{morphuslab,
-	title={Hacking the IoT with MQTT},
+	title={{Hacking the IoT with MQTT}},
 	author="Victor Pasknel",
 	year={2017},
 	howpublished="\url{https://morphuslabs.com/hacking-the-iot-with-mqtt-8edaf0d07b9b}"
 }
 
 @misc{sslvulns,
-	title={Digicert Certificate Inspector},
+	title={{Digicert Certificate Inspector}},
 	howpublished="\url{https://www.digicert.com/cert-inspector-vulnerabilities.htm\#certificate_vulnerabilities}"
 }
 
@@ -98,12 +104,12 @@
 }
 
 @misc{oauthwiki,
-	title={OAuth},
+	title={{OAuth}},
 	howpublished="\url{https://en.wikipedia.org/wiki/OAuth}"
 }
 
 @misc{ocspwiki,
-	title={OCSP},
+	title={{OCSP}},
 	howpublished="\url{https://en.wikipedia.org/wiki/Online_Certificate_Status_Protocol}"
 }
 
@@ -159,34 +165,34 @@
 }
 
 @misc{aesccmwiki,
-	title={CCM mode},
+	title={{CCM mode}},
 	howpublished="\url{https://en.wikipedia.org/wiki/CCM_mode}"	
 }
 
 @misc{zigbeesecbasics2,
-	title={Zigbee Security: Basics, part 2},
+	title={{Zigbee Security: Basics, part 2}},
 	author="Vishruta Rudresh",
 	year={2017},
 	howpublished="\url{https://research.kudelskisecurity.com/2017/11/21/zigbee-security-basics-part-2/}"
 }
 
 @misc{zigbeesecbasics3,
-	title={Zigbee Security: Basics, part 1},
+	title={{Zigbee Security: Basics, part 1}},
 	author="Vishruta Rudresh",
 	year={2017},
 	howpublished="\url{https://research.kudelskisecurity.com/2017/11/21/zigbee-security-basics-part-3/}"
 }
 
 @misc{zigbeespec,
-	title={ZigBee Specification},
+	title={{ZigBee Specification}},
 	howpublished="\url{http://www.zigbee.org/wp-content/uploads/2014/11/docs-05-3474-20-0csg-zigbee-specification.pdf}"}
 
 @misc{digi,
-	title={ZigBee Stack Layers},
+	title={{ZigBee Stack Layers}},
 	howpublished="\url{https://www.digi.com/resources/documentation/Digidocs/90002002/Content/Reference/r_zb_stack.htm}"}
 
 @misc{maxseczigbeenet,
-	title={Maximizing Security in ZigBee Networks},
+	title={{Maximizing Security in ZigBee Networks}},
 	howpublished="\url{https://www.nxp.com/docs/en/supporting-information/MAXSECZBNETART.pdf}",
 	author="nxp",
 	year={2017}}
